--- a/p5js/mqtt-p5-template/index.html
+++ b/p5js/mqtt-p5-template/index.html
@@ -22,6 +22,8 @@
         <li id="temp">Edit this content in index.html</li>
         <li id="light">Edit this content in index.html</li>
         <li id="hum">Edit this content in index.html</li>
+        <li id="mousex"></li>
+        <li id="circle">Oooo</li>
       </ol>
     </div>
     <div id="connection"></div>
