--- a/p5js/mqtt-p5-template/index.html
+++ b/p5js/mqtt-p5-template/index.html
@@ -17,13 +17,7 @@
     <div>
       <h1>MQTT Sockets</h1>
       <ol>
-        <li>Open sketch.js to start developing</li>
-        <li>Edit this content in index.html</li>
-        <li id="temp">Edit this content in index.html</li>
-        <li id="light">Edit this content in index.html</li>
-        <li id="hum">Edit this content in index.html</li>
-        <li id="mousex"></li>
-        <li id="circle">Oooo</li>
+        <li id="hum">Ja?</li>
       </ol>
     </div>
     <div id="connection"></div>
