--- a/p5js/mqtt-p5-template/index.html
+++ b/p5js/mqtt-p5-template/index.html
@@ -16,9 +16,7 @@
   <main>
     <div>
       <h1>MQTT Sockets</h1>
-      <ol>
-        <li id="hum">Ja?</li>
-      </ol>
+      <h2 id="hum">Ja?</h2>
     </div>
     <div id="connection"></div>
   </main>
