--- a/p5js/hue-p5-overview/index.html
+++ b/p5js/hue-p5-overview/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="ddu.ico" type="image/x-icon">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="./assets/ColorConverter.js"></script>
     <script src="sketch.js"></script>
 </head>
 <body>
