--- a/p5js/mqtt-p5-starter/index.html
+++ b/p5js/mqtt-p5-starter/index.html
@@ -16,7 +16,8 @@
   <main>
     <div>
       <h1>MQTT Sockets</h1>
-      <h2 id="messages">Ja?</h2>
+      <p id="messages">Ja?</p>
+      <div id="controllers"></div>
       <div id="chart"><canvas id="chartCanvas"></canvas></div>
     </div>
     <div id="connection"></div>
