Now shows UDP data on website

--- a/nodejs/nodejs-UDP-template/public/index.html
+++ b/nodejs/nodejs-UDP-template/public/index.html
@@ -15,7 +15,11 @@
 </head>
 <body>
     <div id="side-1" class="page show">
-        <h1 id="ip"></h1>
+        <div class="ipContainer">
+            <h1 id="ip"></h1>
+        </div>
+
+        <div id="list"></div>
     </div>
     <div id="side-2" class="page">
         <h1>Side 2</h1>
