Script adjusted to room 304/305

--- a/p5js/mqtt-p5-starter-304/index.html
+++ b/p5js/mqtt-p5-starter-304/index.html
@@ -15,7 +15,7 @@
 <body>
   <main>
     <div>
-      <h1>MQTT Sockets</h1>
+      <h1>Escape room</h1>
       <div id="controllers"></div>
       <div id="chart"><canvas id="chartCanvas"></canvas></div>
     </div>
