heart and stuff

--- a/p5js/firebase-p5-template/index.html
+++ b/p5js/firebase-p5-template/index.html
@@ -25,6 +25,7 @@
                 <li>Set firebase config in firebase.js</li>
                 <li>See example on how to get data in sketch.js</li>
                 <li>Make charts with <a href="https://www.chartjs.org/docs/latest/">chart.js</a></li>
+                <li id="data">Data fra firebase kommer her</li>
             </ol>
         </div>
     </main>
