--- a/elevprojekter/119-P5-MQTT-APP-TEMPLATE/index.html
+++ b/elevprojekter/119-P5-MQTT-APP-TEMPLATE/index.html
@@ -13,6 +13,7 @@
 <body>    
     <div class="page show" id="frontpage">
         <h1 class="title">start</h1>
+        <h1 class="title">start</h1>
     </div>
     <div class="page" id="timer">
         <h1 id="timerHeader" class="title">Tid</h1>
