--- a/p5js/polyhedron_mqtt_receiver/index.html
+++ b/p5js/polyhedron_mqtt_receiver/index.html
@@ -25,8 +25,7 @@
     </div>
     <div class="page" id="page2">
         <div class="textbox">
-            <h1>HTX</h1>
-            <h2>Fup eller fakta?</h2>
+            <h1>Dræb en myte</h1>
             <p>En af de forklaringer, vi møder, går på, at HTX af mange unge og deres forældre opfattes som en snæver uddannelse, der ikke giver bred adgang til videregående uddannelser. Det er desværre en myte, fordi HTX formentlig er den af de treårige studentereksamener, der åbner flest døre til de videregående uddannelser.</p>
             <p><i>Signe Tychsen Philip, underdirektør for Erhvervs- og Arbejdsmarkedsuddannelser</i></p>
         </div>
