--- a/p5js/kmg-controller/index.html
+++ b/p5js/kmg-controller/index.html
@@ -16,38 +16,29 @@
 <body>
     <div id="reload"><img src="./reload.png" alt="hej"></div>
     <div class="page visible" id="page1">
-        <div id="night_mode_override" class="control_button">
-            DDU NIGHT MODE OVERRIDE
+        <div class="page-container">
+            <div id="night_mode_override" class="control_button">
+                NIGHT M OVERRIDE
+            </div>
+            <div id="ddu_sign" class="control_button">
+                DDU SIGN
+            </div>
+           <div class="control_button" data-lightnumber="14">
+                Polyhedron Office
+            </div>
+            <div id="hue_toggle" data-lightnumber="11" class="control_button hue">
+                Bedstemor Office
+            </div>
+            <div id="hue_toggle" data-lightnumber="8" class="control_button hue">
+                Cirkel Office
+            </div>
+            <div id="hue_toggle" data-lightnumber="13" class="control_button hue">
+                Bulp - K2 ceiling 
+            </div>
+            <div id="hue_toggle" data-lightnumber="9" class="control_button hue">
+                Smart plug K2 
+            </div>
         </div>
-        <div id="ddu_sign" class="control_button">
-            DDU SIGN
-        </div>
-        <div class="control_button" data-lightnumber="14">
-            Polyhedron Office
-        </div>
-        <div id="hue_toggle" data-lightnumber="11" class="control_button hue">
-            Bedstemor Office
-        </div>
-        <div id="hue_toggle" data-lightnumber="8" class="control_button hue">
-            Cirkel Office
-        </div>
-        <div id="hue_toggle" data-lightnumber="13" class="control_button hue">
-            Bulp - K2 ceiling 
-        </div>
-        <div id="hue_toggle" data-lightnumber="9" class="control_button hue">
-            Smart plug K2 
-        </div>
-
-    </div>
-    <div class="page" id="page2">
-    </div>
-    <div class="page" id="page3">
-    </div>
-    <div class="page" id="page4">
-    </div>
-    <div class="page" id="page4">
-    </div>
-    <div class="page" id="page5">
     </div>
 </body>
 </html>
