colors - still working on it

--- a/p5js/kmg-controller/index.html
+++ b/p5js/kmg-controller/index.html
@@ -29,6 +29,8 @@
             <div id="hue_toggle" data-lightnumber="11" class="control_button hue">
                 Bedstemor Office
             </div>
+            <input type="range" min="0" max="100" value="50" class="color_slider" data-lightnumber="11">
+
             <div id="hue_toggle" data-lightnumber="8" class="control_button hue">
                 Cirkel Office
             </div>
